--- a/etc/resolv.conf
+++ b/etc/resolv.conf
@@ -8,6 +8,10 @@
 nameserver 208.67.220.220
 nameserver 208.67.222.222
 
+### Telefonica ###
+# nameserver 80.58.61.250 
+# nameserver 80.58.61.254
+
 ### OpenNIC Project ###
 # nameserver 185.16.40.143    # (MD, ES)
 # nameserver 87.216.170.85    # (MD, ES) 
