--- a/.muttrc
+++ b/.muttrc
@@ -1,6 +1,6 @@
 # ~/.muttrc
 #
-# Version: 20141210
+# Version: 2014121012
 #
 # References: 
 # -> http://www.elho.net/mutt/maildir
@@ -13,6 +13,9 @@ set envelope_from="yes"
 
 # set realname
 set realname="username"
+
+# set signature
+set signature="~/.signature"
 
 # pgp
 set pgp_use_gpg_agent = yes
