--- a/.muttrc
+++ b/.muttrc
@@ -79,7 +79,7 @@ unignore from subject to cc date x-mailer x-url user-agent x-os x-pgp-key
 unhdr_order *
 hdr_order subject from to cc date
 my_hdr X-OS: `uname -s` `uname -r`
-my_hdr X-PGP-Key: http://bit.ly/13dv8SO
+# my_hdr X-PGP-Key: http://example.org/~user/pubkey.asc
 
 ### COLOR DEFINITIONS ###
 
