added fail2ban version

--- a/etc/fail2ban/filter.d/dokuwiki-auth.conf
+++ b/etc/fail2ban/filter.d/dokuwiki-auth.conf
@@ -1,7 +1,7 @@
 # /etc/fail2ban/filter.d/dokuwiki-auth.conf
 
 # Requires: DokuWiki Login/Logoff logging plugin
-# Version: 20150220
+# Version: 20150220 (fail2ban 0.9.1)
 
 [INCLUDES]
 before = common.conf
