--- a/etc/fail2ban/filter.d/prosody-auth.conf
+++ b/etc/fail2ban/filter.d/prosody-auth.conf
@@ -1,6 +1,6 @@
 # /etc/fail2ban/filter.d/prosody-auth.conf
 
-# Version: 20140220
+# Version: 20140220 (fail2ban 0.9.1)
 
 [INCLUDES]
 before = common.conf
