added requires section

--- a/etc/fail2ban/filter.d/prosody-auth.conf
+++ b/etc/fail2ban/filter.d/prosody-auth.conf
@@ -1,5 +1,8 @@
 # /etc/fail2ban/filter.d/prosody-auth.conf
 
+# Requires:
+# * debug verbose logging
+# * log_auth module 
 # Version: 20140220 (fail2ban 0.9.1)
 
 [INCLUDES]
