requires and fail2ban version

--- a/etc/fail2ban/filter.d/roundcube-auth.conf
+++ b/etc/fail2ban/filter.d/roundcube-auth.conf
@@ -1,6 +1,7 @@
 # /etc/fail2ban/filter.d/roundcube-auth.conf
 
-# Version: 20150220
+# Requires: log_logins config option
+# Version: 20150220 (fail2ban 0.9.1)
 
 [INCLUDES]
 before = common.conf
