new fontconfig/freetype2 versions

--- a/.fonts.conf
+++ b/.fonts.conf
@@ -1,16 +1,14 @@
 <?xml version="1.0"?>
 
 <!-- ~/.fonts.conf -->
-<!-- Version: 20160413 (fontconfig 2.11.95) -->
+<!-- Version: 20161202 (fontconfig 2.12.1 & freetype2 2.7) -->
+
+<!-- Gnome font config: Slight Hinting & RGBA Antialiasing -->
 
 <!DOCTYPE fontconfig SYSTEM 'fonts.dtd'>
 <fontconfig>
-    <!-- Disable the effects of 10-hinting-slight.conf -->
-    <match target="pattern">
-        <edit name="hintstyle" mode="delete"><const>hintslight</const></edit>
-    </match>
     <!-- windows fonts-->
     <match target="font" >
-        <edit name="embeddedbitmap" mode="assign"><bool>false</bool></edit>
+        <edit name="embeddedbitmap"><bool>false</bool></edit>
     </match>
 </fontconfig>
