--- a/.muttrc
+++ b/.muttrc
@@ -1,6 +1,6 @@
 # ~/.muttrc
 #
-# Version: 20161205 (mutt 1.7.1)
+# Version: 20161217 (mutt 1.7.2)
 #
 # References:
 # -> http://www.elho.net/mutt/maildir
@@ -26,7 +26,8 @@ set realname="username"
 # set signature
 set signature="~/.mutt/signature"
 
-# pgp
+# GnuPG
+# https://dev.mutt.org/trac/wiki/MuttGuide/UseGPG
 # source ~/.mutt/gpg.rc
 set pgp_use_gpg_agent = yes
 set pgp_sign_as = your_key_id 
