--- a/etc/resolv.conf
+++ b/etc/resolv.conf
@@ -1,12 +1,15 @@
 # /etc/resolv.conf
 #
-# Version: 20140903
+# Version: 20180206
 
 # search example.es
 
+### Quad9 ###
+nameserver 9.9.9.9
+
 ### OpenDNS ###
-nameserver 208.67.220.220
-nameserver 208.67.222.222
+# nameserver 208.67.220.220
+# nameserver 208.67.222.222
 
 ### Telefonica ###
 # nameserver 80.58.61.250 
