--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-# Version 20170303 (tmux-2.3)                                                   
+# Version 20180206 (tmux-2.6)                                                   
 
 # Requires
 # + Powerline
@@ -6,9 +6,6 @@
 
 # 256 colors
 set -g default-terminal "xterm-256color"
-
-# Powerline
-source "/usr/lib/python3.6/site-packages/powerline/bindings/tmux/powerline.conf"
 
 # Mouse support
 set -g mouse on
@@ -20,3 +17,8 @@ set -g set-titles-string "#T"
 # Start tab numbering at 1
 set -g base-index 1
 set-window-option -g pane-base-index 1
+
+# Powerline
+source "/usr/lib/python3.6/site-packages/powerline/bindings/tmux/powerline.conf"
+# source "/usr/local/lib/python3.6/site-packages/powerline/bindings/tmux/powerline.conf"
+
