--- a/etc/resolv.conf
+++ b/etc/resolv.conf
@@ -1,11 +1,14 @@
 # /etc/resolv.conf
 #
-# Version: 20180206
+# Version: 20180402
 
 # search example.es
 
 ### Quad9 ###
 nameserver 9.9.9.9
+
+### CloudFlare ###
+# nameserver 1.1.1.1
 
 ### OpenDNS ###
 # nameserver 208.67.220.220
