--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 
-<!-- ~/.fonts.conf -->
+<!-- ~/.config/fontconfig/fonts.conf -->
 <!-- Version: 20161202 (fontconfig 2.12.1 & freetype2 2.7) -->
 
 <!-- Gnome font config: Slight Hinting & RGBA Antialiasing -->
